--- a/css/pages/advisory-commitee.css
+++ b/css/pages/advisory-commitee.css
@@ -12,6 +12,7 @@
   margin-bottom: 2rem;
   min-height: 150px;
   align-content: center;
+  border-radius: 8px;
 }
 .ism-cards:hover {
   border: 1px solid #192f60;
